--- a/application.properties
+++ b/application.properties
@@ -10,3 +10,6 @@ management.endpoints.web.exposure.include=*
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
+
+eureka.client.instance.preferIpAddress = true
+eureka.instance.hostname=localhost
